# offensive-toolkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.sh
.config/: .dockerignore  .pre-commit-config.yaml  .yamllint.yml  README.md  pytest.ini
.github/workflows/: ci.yml
api_security/: __init__.py  api_fuzzer.py  graphql_scanner.py
cloud_security/: __init__.py  aws_scanner.py  azure_scanner.py  cloud_cli.py  gcp_scanner.py
config/: README.md  authorized_targets.txt.template  config.yaml.template
docker/: README.md
docs/: ARCHITECTURE.md  DEFECTDOJO-INTEGRATION.md  MITRE-MAPPING.md  POST-EXPLOITATION-GUIDE.md  PROJECT-STRUCTURE.md  TESTING-GUIDE.md
evasion/: __init__.py
exploitation/: __init__.py  reverse_shell.py
payload_development/: __init__.py
post-exploitation/: __init__.py
post_exploitation/: __init__.py  credential_dump.py  lateral_movement.py  persistence.py  privesc_linux.py  privesc_scanner.py  privesc_windows.py
reconnaissance/: __init__.py  dns_resolver.py  port_scanner.py  subdomain_enum.py  whois_lookup.py
reporting/: defectdojo_client.py  report_generator.py  unified_report.py
scanning/: __init__.py
scripts/: README.md  requirements.txt  setup.ps1
social_engineering/: __init__.py
src/offensive_toolkit/: __init__.py
src/offensive_toolkit/api_security/: api_fuzzer.py
src/offensive_toolkit/cloud_security/: aws_scanner.py  azure_scanner.py  cloud_cli.py  gcp_scanner.py
src/offensive_toolkit/exploitation/: reverse_shell.py
src/offensive_toolkit/post_exploitation/: __init__.py  credential_dump.py  lateral_movement.py  persistence.py  privesc_linux.py  privesc_scanner.py  privesc_windows.py
src/offensive_toolkit/reconnaissance/: dns_resolver.py  port_scanner.py  subdomain_enum.py  whois_lookup.py
src/offensive_toolkit/reporting/: __init__.py  defectdojo_client.py  report_generator.py  unified_report.py
src/offensive_toolkit/utils/: __init__.py  config.py  helpers.py  logger.py
src/offensive_toolkit/web_security/: directory_bruteforcer.py  sql_injection.py  xss_scanner.py
test_output/: portscan_192.168.1.10_20251017_233129.json
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_reconnaissance_workflow.py  test_web_security_workflow.py
tests/unit/: test_api_fuzzer.py  test_config.py  test_directory_bruteforcer.py  test_dns_resolver.py  test_helpers.py  test_logger.py  test_port_scanner.py  test_port_scanner_enhanced.py  test_reverse_shell.py  test_sql_injection.py  test_subdomain_enum.py  test_whois_lookup.py  test_xss_scanner.py
utils/: __init__.py  config.py  helpers.py  logger.py
web-security/: __init__.py
web_security/: directory_bruteforcer.py  sql_injection.py  xss_scanner.py
wireless/: __init__.py
